--- a/barbershop/catalog.html
+++ b/barbershop/catalog.html
@@ -26,12 +26,14 @@
               <a href="index.html">Главная</a>
             </li>
             <li class="nav__list-item"><a href="#">О Седоне</a></li>
-            <li class="nav__list-item">
-              <span class="current">Гостницы</span>
-            </li>
+            <li class="nav__list-item current-page">Гостницы</li>
           </ul>
           <div class="nav__user">
-            <div class="nav__user-item">search</div>
+            <div class="nav__user-item nav-user-item-search">
+              <a href="#">
+                <img src="images/search.svg" alt="" />
+              </a>
+            </div>
             <div class="nav__user-item">
               <img src="images/favourites.svg" alt="" />
             </div>
@@ -50,27 +52,57 @@
           <form action="#" method="post" class="form-grid">
             <fieldset class="infrastructure">
               <legend class="filter_mini-title">Инфраструктура:</legend>
-              <input type="checkbox" name="infrastructure" checked /><label
-                >Бассейн</label
-              >
-              <input type="checkbox" name="infrastructure" checked /><label
-                >Парковка</label
-              >
-              <input type="checkbox" name="infrastructure" /><label
-                >Wi-Fi</label
-              >
+              <p>
+                <input
+                  type="checkbox"
+                  name="infrastructure"
+                  checked
+                  class="infra-input"
+                /><label>Бассейн</label>
+              </p>
+              <p>
+                <input
+                  type="checkbox"
+                  name="infrastructure"
+                  checked
+                  class="infra-input"
+                /><label>Парковка</label>
+              </p>
+              <p>
+                <input
+                  type="checkbox"
+                  name="infrastructure"
+                  class="infra-input"
+                /><label>Wi-Fi</label>
+              </p>
             </fieldset>
             <fieldset class="type-home">
               <legend class="filter_mini-title">Тип жилья:</legend>
-              <input type="radio" name="housing" value="gost" checked /><label
-                >Гостиница</label
-              >
-              <input type="radio" name="housing" value="mot" /><label
-                >Мотель</label
-              >
-              <input type="radio" name="housing" value="ap" /><label
-                >Апартаменты</label
-              >
+              <p>
+                <input
+                  type="radio"
+                  name="housing"
+                  value="gost"
+                  checked
+                  class="home-input"
+                /><label>Гостиница</label>
+              </p>
+              <p>
+                <input
+                  type="radio"
+                  name="housing"
+                  value="mot"
+                  class="home-input"
+                /><label>Мотель</label>
+              </p>
+              <p>
+                <input
+                  type="radio"
+                  name="housing"
+                  value="ap"
+                  class="home-input"
+                /><label>Апартаменты</label>
+              </p>
             </fieldset>
             <fieldset class="price">
               <legend class="filter_mini-title">Стоимость, ₽:</legend>
@@ -174,31 +206,34 @@
           <button type="button" class="btn-loading">Загрузить еще</button>
         </div>
         <h3 class="visually-hidden">Список страниц</h3>
-        <div class="page-list">
-          <a href="#" class="page-number current">1</a>
-          <a href="#" class="page-number">2</a>
-          <a href="#" class="page-number">3</a>
-          <a href="#" class="page-number">4</a>
-          <a href="#" class="page-number">...</a>
-          <a href="#" class="page-number">10</a>
+        <div class="page-list-and-form">
+          <div class="page-list">
+            <a href="#" class="page-number current-number">1</a>
+            <a href="#" class="page-number">2</a>
+            <a href="#" class="page-number">3</a>
+            <a href="#" class="page-number">4</a>
+            <a href="#" class="page-number">...</a>
+            <a href="#" class="page-number">10</a>
+          </div>
+          <form action="#" method="post" class="gost-on-page">
+            <label for="#strings" class="label-gost"
+              >Гостиниц на странице:</label
+            >
+            <select name="strings" id="strings" class="select-gost">
+              <option value="4">4</option>
+            </select>
+          </form>
         </div>
-        <form action="#" method="post">
-          <label for="#strings">Гостиниц на странице:</label>
-          <select name="strings" id="strings">
-            <option value="4">4</option>
-          </select>
-        </form>
       </div>
       <div class="rassilka">
-        <h2>Подпишитесь на рассылку</h2>
-        <p>
+        <h2 class="podpiska">Подпишитесь на рассылку</h2>
+        <p class="cool-info-only">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
         <form action="#" method="post">
-          <p>
-            <label> Ваш e-mail </label>
-            <input type="email" placeholder="Ваш e-mail" />
-            <button type="button" class="izbrannoe">Подписаться</button>
+          <p class="email-subscribe">
+            <input type="email" placeholder="Ваш e-mail" class="email-form" />
+            <button type="button" class="subscribe-btn">Подписаться</button>
           </p>
         </form>
       </div>
@@ -207,13 +242,19 @@
     <footer class="page-footer">
       <ul class="social">
         <li class="social-item">
-          <a href="#">Twitter</a>
+          <a href="#">
+            <img src="/images/twitter.svg" alt="" width="18" height="15" />
+          </a>
         </li>
         <li class="social-item">
-          <a href="#">Facebook</a>
+          <a href="#">
+            <img src="/images/facebook.svg" alt="" width="20" height="18" />
+          </a>
         </li>
         <li class="social-item">
-          <a href="#">YouTube</a>
+          <a href="#">
+            <img src="/images/youtube.svg" alt="" width="20" height="16" />
+          </a>
         </li>
       </ul>
       <p>
