--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -22,14 +22,18 @@
             class="nav__logo"
           />
           <ul class="nav__list">
-            <li class="nav__list-item">
-              <a href="#"><span class="current">Главная</span></a>
+            <li class="nav__list-item current-page">
+              <a href="#" class="nav-current">Главная</a>
             </li>
             <li class="nav__list-item"><a href="#">О Седоне</a></li>
             <li class="nav__list-item"><a href="catalog.html">Гостницы</a></li>
           </ul>
           <div class="nav__user">
-            <div class="nav__user-item">search</div>
+            <div class="nav__user-item nav-user-item-search">
+              <a href="#">
+                <img src="images/search.svg" alt="" />
+              </a>
+            </div>
             <div class="nav__user-item">
               <img src="images/favourites.svg" alt="" />
             </div>
@@ -65,43 +69,51 @@
       <h3 class="visually-hidden">Преимущества Седоны</h3>
       <div class="adventage-list">
         <div class="true-city">
-          <div class="adventage-header-white">НАСТОЯЩИЙ ГОРОДОК</div>
+          <div class="adventage-header-white white-1">НАСТОЯЩИЙ ГОРОДОК</div>
           <p>Седона - не аттракцион для туристов, там течет своя жизнью</p>
         </div>
         <div class="true-city-img">
           <img src="images/benefit1.jpg" alt="" />
         </div>
         <div class="home">
+          <img src="/images/icon-1.svg" alt="" />
           <div class="adventage-header-black">ЖИЛЬЁ</div>
           <p>Рекомендуем пожить в нашем мотеле, всё как в кино!</p>
         </div>
         <div class="food">
+          <img src="/images/icon-2.svg" alt="" />
           <div class="adventage-header-black">ЕДА</div>
           <p>
             Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
           </p>
         </div>
         <div class="suvenirs">
-          <div class="adventage-header-black">Сувениры</div>
+          <img src="/images/icon-3.svg" alt="" />
+          <div class="adventage-header-black">СУВЕНИРЫ</div>
           <p>Не только китайского, но и настоящего местного производства!</p>
         </div>
         <div class="mountains-img">
           <img src="images/benefit2.jpg" alt="" />
         </div>
         <div class="diablo">
-          <div class="adventage-header-white">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</div>
+          <div class="adventage-header-white white-2">
+            ТАМ ЕСТЬ МОСТ ДЬЯВОЛА
+          </div>
           <p>Да, по нему можно пройти! Если вы осмелитесь, размеется</p>
         </div>
         <div class="s">
           <div class="adventage-header-black">НЕБОЛЬШАЯ ПЛОЩАДЬ</div>
+          <p class="number-adventage">— №3 —</p>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="road">
-          <div class="adventage-header-black">КРАСИВАЯ ДОРОГА</div>
+          <div class="adventage-header-black">КРАСИВАЯ <br />ДОРОГА</div>
+          <p class="number-adventage">— №4 —</p>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="touristes">
-          <div class="adventage-header-black">МАЛО ТУРИСТОВ</div>
+          <div class="adventage-header-black">МАЛО <br />ТУРИСТОВ</div>
+          <p class="number-adventage">— №5 —</p>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </div>
@@ -131,13 +143,19 @@
     <footer class="page-footer">
       <ul class="social">
         <li class="social-item">
-          <a href="#">Twitter</a>
+          <a href="#">
+            <img src="/images/twitter.svg" alt="" width="18" height="15" />
+          </a>
         </li>
         <li class="social-item">
-          <a href="#">Facebook</a>
+          <a href="#">
+            <img src="/images/facebook.svg" alt="" width="20" height="18" />
+          </a>
         </li>
         <li class="social-item">
-          <a href="#">YouTube</a>
+          <a href="#">
+            <img src="/images/youtube.svg" alt="" width="20" height="16" />
+          </a>
         </li>
       </ul>
       <p>
