Изменил на Лох главную

--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -23,7 +23,7 @@
           />
           <ul class="nav__list">
             <li class="nav__list-item current-page">
-              <a href="#" class="nav-current">Главная</a>
+              <a href="#" class="nav-current">Лох</a>
             </li>
             <li class="nav__list-item"><a href="#">О Седоне</a></li>
             <li class="nav__list-item"><a href="catalog.html">Гостницы</a></li>
